--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brayant Flores</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- header -->
     <header>
         <nav>
-            <div class="logo">Brayant Flores</div>
+            <div class="logo">Bt F</div>
             <ul>
                 <li>About</li>
                 <li>My Skills</li>
@@ -19,7 +25,7 @@
             </ul>
         </nav>
         <section class="home">
-            <h1>Hola, mi nombre es Brayant Flores</h1>
+            <h1>Hola, mi nombre es <span class="name-title">Brayant Flores</span></h1>
             <h1>Y soy Desarrolldador de Software</h1>
         </section>
     </header>
