--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link 
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap" 
+        rel="stylesheet"
+    >
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/da0c18c87d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- header -->
@@ -27,7 +32,15 @@
         <section class="home">
             <h1>Hola, mi nombre es <span class="name-title">Brayant Flores</span></h1>
             <h1>Y soy Desarrolldador de Software</h1>
+            <i class="fa-solid fa-angles-down"></i>
         </section>
     </header>
+    <footer>
+        <div class="footer-izquierda">
+            <div class="logo">Bt F</div>
+            <p class="footer-p">Lorem, ipsum.</p>
+        </div>
+        
+    </footer>
 </body>
 </html>
