--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@
             <div class="logo">Bt F</div>
             <p class="footer-p">Lorem, ipsum.</p>
         </div>
-        
+        <div class="footer-derecha">
+            <form action="#">
+                <input type="email" name="email" id="" class="form-element">
+                <textarea name="mensaje" id="" cols="3" rows="1" class="form-element"></textarea>
+                <input type="submit" name="" id="" class="form-element">
+            </form>
+        </div>
     </footer>
 </body>
 </html>
