seccion de about añadida

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,15 +35,41 @@
             <i class="fa-solid fa-angles-down"></i>
         </section>
     </header>
+
+    <section class="about">
+        <div class="about-izquierda">
+            <img 
+                src="https://images.unsplash.com/photo-1552058544-f2b08422138a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=399&q=80" 
+                alt="about me"
+            >
+        </div>
+        <div class="about-derecha">
+            <div class="about-derecha__me">
+                <span class="subtitle-about">About me</span>
+                <h2>Brayant Flores</h2>
+                <p>
+                    Soy estudiante en curso de Ingenieria de tecnologia de Software
+                    , me apaciona la programacion, y lo realcionado con la informatica,
+                    llevo mas de 3 años programando como Freelancer y deseo tener mi propio negocio
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
     <footer>
         <div class="footer-izquierda">
             <div class="logo">Bt F</div>
-            <p class="footer-p">Lorem, ipsum.</p>
+            <p class="footer-p">Hola, puedes seguirme en mis redes sociales</p>
+            <div class="socialmedia">
+                <i class="fa-brands fa-instagram" class="socialmedia-item"></i>
+                <i class="fa-brands fa-tiktok" class="socialmedia-item"></i>
+            </div>
         </div>
         <div class="footer-derecha">
             <form action="#">
-                <input type="email" name="email" id="" class="form-element">
-                <textarea name="mensaje" id="" cols="3" rows="1" class="form-element"></textarea>
+                <input type="email" name="email" id="" class="form-element" placeholder="Email">
+                <textarea name="mensaje" id="" cols="3" rows="1" class="form-element" placeholder="Mensaje"></textarea>
                 <input type="submit" name="" id="" class="form-element">
             </form>
         </div>
