--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/da0c18c87d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -33,12 +35,15 @@
                     <button class="home-button">Resumen</button>
                     <button class="home-button">Portafolio</button>
                 </div>
-                <div class="social-media"></div>
             </div>
-            <div></div>
+            <div class="home-none"></div>
+            <div class="social-media">
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/brayan_tsj/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/brayant-flores-b9a016240/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
         </section>
     </header>
-    
     <footer>
 
     </footer>
