--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- NavBar -->
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Resume</a></li>
                 <li><a href="#">Portafolio</a></li>
@@ -27,7 +27,7 @@
             <h3>Brayant Flores</h3>
         </nav>
         <!-- home -->
-        <section class="home">
+        <section class="home" id="home">
             <div class="home-info">
                 <h2 class="home-title">Brayant <span>Flores</span></h2>
                 <p class="home-description">Desarrollador Web</p>
@@ -44,6 +44,31 @@
             </div>
         </section>
     </header>
+    <!-- About -->
+    <section class="about">
+        <div class="about-izquierda">
+            <div class="about-info">
+                <div class="about-info__box">
+                    <h2 class="about-title">About</h2>
+                    <span class="line-green"></span>                
+                    <p class="about-email">brayant71@gmail.com</p>
+                </div>
+                <p class="about-info">
+                    Lorem ipsum dolor sit amet consectetur adipisicing 
+                    elit. Vitae ducimus porro totam illum, 
+                    odio sunt exercitationem voluptatum sapiente sed 
+                    similique ad tenetur veniam quisquam praesentium 
+                    optio error consequuntur architecto? Veniam.
+                </p>
+                <div class="about-ubi">
+                    <h3>Monterret N.L</h3>
+                </div>
+            </div>
+        </div>
+        <div class="about-derecha">
+
+        </div>
+    </section>
     <footer>
 
     </footer>
